--- a/Signup.html
+++ b/Signup.html
@@ -16,6 +16,8 @@
             font-family: 'Noto Sans', sans-serif;
             color: #FFF;
         }
+
+        /* Custom styles for the glass container */
         .glass-container {
             border-radius: 20px;
             border: 1px solid #AFAFAF;
@@ -24,6 +26,8 @@
             backdrop-filter: blur(26.5px);
             -webkit-backdrop-filter: blur(26.5px);
         }
+
+        /* Custom styles for input fields */
         .custom-input {
             background-color: transparent;
             border-radius: 12px;
@@ -32,25 +36,26 @@
             width: 100%;
             color: #FFF;
         }
-        .custom-input::placeholder { color: #a0aec0; }
-        .signup-button { background: linear-gradient(90deg, #8A2BE2, #AD3BEF); }
-        .error-message {
-            color: #f87171;
-            font-size: 0.875rem;
-            text-align: center;
-            margin-top: 1rem;
-            display: none;
+        .custom-input::placeholder {
+            color: #a0aec0;
+        }
+
+        /* Custom button gradient */
+        .signup-button {
+            background: linear-gradient(90deg, #8A2BE2, #AD3BEF);
         }
     </style>
 </head>
 <body class="min-h-screen flex items-center justify-center p-4">
 
+    <!-- Header for the Brand Name -->
     <header class="absolute top-0 left-0 p-4 sm:p-8">
         <h1 class="text-2xl font-bold text-white tracking-wide">SubsTrack</h1>
     </header>
 
     <div class="w-full max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 items-center gap-16">
         
+        <!-- Left Side: Welcome Text -->
         <div class="text-center md:text-left">
             <h1 class="text-6xl lg:text-8xl font-semibold leading-tight">
                 Create Your <br> 
@@ -58,6 +63,7 @@
             </h1>
         </div>
 
+        <!-- Right Side: Sign Up Form -->
         <div class="glass-container w-full max-w-md p-8 md:p-10 mx-auto">
             <div class="text-left mb-8">
                 <h2 class="text-2xl font-bold">SIGN UP</h2>
@@ -65,33 +71,39 @@
             </div>
 
             <form id="signup-form" class="space-y-5">
+                <!-- Full Name Input -->
                 <div>
-                    <input id="name" type="text" placeholder="Full Name" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500" required>
+                    <input type="text" placeholder="Full Name" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500">
                 </div>
+                <!-- Email Input -->
                 <div>
-                    <input id="email" type="email" placeholder="Email" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500" required>
+                    <input type="email" placeholder="Email" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500">
                 </div>
+                <!-- Password Input -->
                 <div>
-                    <input id="password" type="password" placeholder="Password" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500" required>
+                    <input type="password" placeholder="Password" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500">
                 </div>
+                 <!-- Confirm Password Input -->
                 <div>
-                    <input id="confirmPassword" type="password" placeholder="Confirm Password" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500" required>
+                    <input type="password" placeholder="Confirm Password" class="custom-input focus:outline-none focus:ring-2 focus:ring-purple-500">
                 </div>
+
+                <!-- Sign Up Button -->
                 <div>
-                    <button id="signup-btn" type="submit" class="w-full signup-button text-white font-bold py-3 px-4 rounded-lg hover:opacity-90 transition-opacity duration-300 mt-2">
+                    <button id="signup-btn" type="submit" class="w-full signup-button text-white font-bold py-3 px-4 rounded-lg hover:opacity-90 transition-opacity duration-300 mt-2 disabled:opacity-50">
                         Create Account
                     </button>
                 </div>
             </form>
 
-            <p id="error-message" class="error-message"></p>
-
+            <!-- Divider -->
             <div class="my-6 flex items-center">
                 <div class="flex-grow border-t border-gray-600"></div>
                 <span class="mx-4 text-gray-500 text-sm">Or</span>
                 <div class="flex-grow border-t border-gray-600"></div>
             </div>
 
+            <!-- Social Logins -->
             <div class="flex justify-center items-center space-x-4">
                 <button class="p-2 border border-gray-600 rounded-full hover:bg-gray-700 transition-colors">
                     <img src="https://img.icons8.com/color/48/000000/google-logo.png" alt="Google" class="h-6 w-6"/>
@@ -101,6 +113,7 @@
                 </button>
             </div>
 
+            <!-- Login Link -->
             <div class="mt-6 text-center text-sm text-gray-400">
                 <p>Already have an account? <a href="login.html" class="font-medium text-purple-400 hover:text-purple-300">Login</a></p>
             </div>
@@ -110,16 +123,23 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const signupForm = document.getElementById('signup-form');
+            const signupBtn = document.getElementById('signup-btn');
 
             signupForm.addEventListener('submit', (e) => {
-                e.preventDefault(); // Prevent default form submission
-                
-                // Redirect directly to the index page upon clicking the button
-                window.location.href = 'homepage.html';
+                e.preventDefault(); // Prevent the form from submitting normally
+
+                // Change button text and disable it
+                signupBtn.textContent = 'Creating...';
+                signupBtn.disabled = true;
+
+                // Simulate a network request (e.g., 1.5 seconds)
+                setTimeout(() => {
+                    // Redirect to the login page after the delay
+                    window.location.href = 'login.html';
+                }, 1500);
             });
         });
     </script>
 
 </body>
 </html>
-
